# streamlit_sample

./: .gitignore  README.md  docker-compose.yml
data/: download.sh
env/elasticsearch/: Dockerfile  download.sh
etl/: Dockerfile  main.py  pyproject.toml
etl/step/extract/: extract.py
jupyter/: pyproject.toml
lib/es/: crud.py  document.py  index.py
lib/es/mapping/: document.json
lib/wakati/: wakati.py
web/: Dockerfile  main.py  pyproject.toml
