[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
metaflow = "^2.2.6"
pandas = "^1.2.1"
elasticsearch = "^7.10.1"
SudachiPy = "^0.5.1"
SudachiDict-core = "^20201223.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
