[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyter = "^1.0.0"
elasticsearch = "^7.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
