[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
streamlit = "^0.75.0"
elasticsearch = "^7.10.1"
SudachiPy = "^0.5.1"
SudachiDict-core = "^20201223.post1"
nlplot = "^1.2.0"
pyLDAvis = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
